@@ -104,6 +104,12 @@ Core
    for DNS functionality. Modules that use this functionality will require that
    a DNS resolver module is loaded and available.
 
+ * Most command-line options are now processed after asterisk.conf.  The
+   only command-line options that are processed first are needed to read
+   asterisk.conf.  The -X option now applies to asterisk.conf only.  To
+   enable #exec for other config files you must set execincludes=yes in
+   asterisk.conf.  Any other option set on the command-line will now
+   override the equivalent setting from asterisk.conf.
 
 Functions
 ------------------
